--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.13",
+    "@types/react-geocode": "^0.2.1",
     "axios": "^1.3.4",
     "mapbox-gl": "^2.13.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-geocode": "^0.2.3",
     "react-icons": "^4.8.0",
-    "react-map-gl": "^7.0.21"
+    "react-map-gl": "^7.0.21",
+    "react-map-gl-geocoder": "^2.2.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.15.3",
