--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.13",
     "@types/react-geocode": "^0.2.1",
+    "@types/react-map-gl": "^6.1.3",
     "axios": "^1.3.4",
     "mapbox-gl": "^2.13.0",
     "path": "^0.12.7",
